# reddit-mcp

./: .bumpversion.cfg  .env.backup  README.md  pyproject.toml
reddit_mcp/: config.py  reddit_client.py  server.py
scripts/: test_basic.py
tests/: test_config.py
