[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-mcp-tool"
version = "0.1.0"
description = "Reddit MCP server for reading and searching Reddit content"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=1.0.0",
    "praw>=7.7.1",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["reddit_mcp"]

[project.scripts]
reddit-mcp-tool = "reddit_mcp.server:run_server"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']
